fix overflow issue

--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
+    width: 512px;
+    height: 512px;
     border-style: dashed;
     border-width: 1px;
     border-color: black;
